--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The datasheet for charmers">
+    <meta name="description" content="Essentials for charm developers">
     <link rel="stylesheet" href="https://unpkg.com/chota@latest">
     <style>
       :root {
