--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://unpkg.com/chota@latest">
     <style>
       :root {
-        --color-primary: #e95420
+        --color-primary: #e95420;
       }
       h4 {
-        margin-top: 2rem;
+        margin: 2rem 0 0.5rem 0;
       }
       h5 {
         margin: 0 0 0.5rem 0;
@@ -30,6 +30,10 @@
       }
       a.card h5 {
         color: var(--color-primary);
+      }
+      ul {
+        margin-top: 0rem;
+        padding-left: 2.5rem;
       }
       .row {
         padding-top: 1rem;
@@ -79,6 +83,30 @@
             </li>
             <li>
               <a target="_blank" href="https://documentation.ubuntu.com/pebble/reference/layer-specification/">Pebble layer specification</a>
+            </li>
+          </ul>
+          <h4>12-factor tutorials</h4>
+          <ul>
+            <li>
+              <a target="_blank" href="https://canonical-charmcraft.readthedocs-hosted.com/en/stable/tutorial/write-your-first-kubernetes-charm-for-a-django-app/#">Django</a>
+            </li>
+            <li>
+              <a target="_blank" href="https://canonical-charmcraft.readthedocs-hosted.com/en/stable/tutorial/write-your-first-kubernetes-charm-for-a-fastapi-app/">FastAPI</a>
+            </li>
+            <li>
+              <a target="_blank" href="https://canonical-charmcraft.readthedocs-hosted.com/en/stable/tutorial/flask/">Flask</a>
+            </li>
+            <li>
+              <a target="_blank" href="https://canonical-charmcraft.readthedocs-hosted.com/en/stable/tutorial/write-your-first-kubernetes-charm-for-a-go-app/">Go</a>
+            </li>
+          </ul>
+          <h4>Utilities for charmers</h4>
+          <ul>
+            <li>
+              <a target="_blank" href="https://github.com/canonical/concierge">concierge</a> - provision machines
+            </li>
+            <li>
+              <a target="_blank" href="https://github.com/canonical/jhack">jhack</a> - do much, much more!
             </li>
           </ul>
         </div>
