add even more links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         color: var(--color-primary);
       }
       ul {
-        margin-top: 0rem;
+        margin: 0rem 0 2rem 0;
         padding-left: 2.5rem;
       }
       .row {
@@ -100,7 +100,7 @@
               <a target="_blank" href="https://canonical-charmcraft.readthedocs-hosted.com/en/stable/tutorial/write-your-first-kubernetes-charm-for-a-go-app/">Go</a>
             </li>
           </ul>
-          <h4>Utilities for charmers</h4>
+          <h4>Utilities</h4>
           <ul>
             <li>
               <a target="_blank" href="https://github.com/canonical/concierge">concierge</a> - provision machines
@@ -109,6 +109,18 @@
               <a target="_blank" href="https://github.com/canonical/jhack">jhack</a> - do much, much more!
             </li>
           </ul>
+          <h4>Community</h4>
+          <ul>
+            <li>
+              <a target="_blank" href="https://discourse.charmhub.io/">Discourse forum</a>
+            </li>
+            <li>
+              <a target="_blank" href="https://matrix.to/#/#charmhub-charmdev:ubuntu.com">Matrix chat</a>
+            </li>
+          </ul>
+          <p>
+            Looking for a charm? <a target="_blank" href="https://charmhub.io/">Search Charmhub</a>
+          </p>
         </div>
       </div>
     </div>
