--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
           <h4>Quick reference</h4>
           <ul>
             <li>
-              <a target="_blank" href="https://canonical-charmcraft.readthedocs-hosted.com/en/stable/reference/files/charmcraft-yaml-file/">charmcraft.yaml specification</a>
+              <a target="_blank" href="https://canonical-charmcraft.readthedocs-hosted.com/en/stable/reference/files/charmcraft-yaml-file/">charmcraft.yaml spec</a>
             </li>
             <li>
-              <a target="_blank" href="https://documentation.ubuntu.com/pebble/reference/layer-specification/">Pebble layer specification</a>
+              <a target="_blank" href="https://documentation.ubuntu.com/pebble/reference/layer-specification/">Pebble layer spec</a>
             </li>
           </ul>
           <h4>12-factor tutorials</h4>
